src/components/Footer/Footer.module.css
.footer {
    width: 100%;
    background-color: #0b1c22;
    margin-top: 26px;
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
    padding: 10px 0 0 0;
}
.items-wrapper {
    display: flex;
    width: 1180px;
    flex-wrap: wrap;
}
.item {
    width: 25%;
    display: flex;
    flex-direction: column;
}
.item span, .social-wrapper span {
    font-size: 20px;
    color: #ffff00c7;
    margin-bottom: 6px;
    font-weight: 300;
}
.social {
    display: flex;
    flex-direction: column;
    margin-top: 6px;
}
.social a {
    display: flex;
    align-items: center;
}
.social a img {
    margin-right: 6px;
}
.sub-column-wrapper {
    display: flex;
}
.sub-column {
    display: flex;
    flex-direction: column;
    margin: 0 14px;
}
.item:nth-child(2) {
    display: flex;
    align-items: center;
}
.item:nth-child(3) {
    display: flex;
    align-items: center;
}
.item:nth-child(4) {
    display: flex;
    text-align: end;
}
.item a {
    text-decoration: none;
    color: #ffffffb8;
    margin: 1px 0;
    font-weight: 200;
}
.item a:hover {
    color: yellow;
}
.item:nth-child(4) p {
    margin: 0;
}
.phone {
    font-size: 14px;
}
.contact-header {
    color: white;
}
.copyrigt {
    width: 100%;
    border-top: 1px solid #ffffff24;
    margin-top: 10px;
}
.copyrigt p {
    text-align: center;
    color: #faebd7db;
    font-weight: 300;
}

@media only screen and (max-width: 1200px) {
    .items-wrapper {
        width: 90%;
    }
}

@media only screen and (max-width: 600px) {
    .item {
        width: 50%;
        align-items: flex-start;
    }
    .item:nth-child(2) {
        margin-top: 0;
        align-items: flex-start;
    }
    .item:nth-child(3) {
        margin-top: 18px;
        align-items: flex-start;
    }
    
    .item:nth-child(4) {
        margin-top: 18px;
    }
    .social {
        align-items: flex-start;
    }
    .item a {
        margin: 6px 0;
        font-size: 20px;
    }
    .sub-column {
        margin: 0 14px 0 0;
    }
}

